<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_radius"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_radius"
            android:ems="10"
            android:hint="@string/enter_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="32"
            android:paddingLeft="10dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clearUsername"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/clearUsername" />

            <Button
                android:id="@+id/confirmUsername"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_radius"
                android:text="@string/setUsername" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>